--- a/README.textile
+++ b/README.textile
@@ -2,4 +2,4 @@ h1. Skitter - Slideshow for anytime!
 
 With 23 different animations, two types of navigation and many options to customize!
 
-Distributed under the GPL license (http://en.wikipedia.org/wiki/GNU_General_Public_License).
+License: Dual licensed under the MIT or GPL Version 2 licenses
